--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
-    "next": "^14.0.3",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.18.0",
+    "next": "^14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
