--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.18.0",
     "next": "^14.0.4",
